[gd_scene load_steps=7 format=3 uid="uid://bxfmkq8bgumev"]

[ext_resource type="Script" path="res://Scenes/Map/Combat/Scripts/combat.gd" id="1_pbo0u"]
[ext_resource type="PackedScene" uid="uid://bs6ej35oeq114" path="res://Scenes/Map/Combat/note.tscn" id="2_kjpon"]
[ext_resource type="LabelSettings" uid="uid://dw18pcv0wtiom" path="res://Themes/BodyLabel.tres" id="3_ctww0"]
[ext_resource type="PackedScene" uid="uid://bnvwxkdgsp4vp" path="res://Scenes/StorageUI/PartUI/part_sprite.tscn" id="4_6gjpa"]
[ext_resource type="PackedScene" uid="uid://dmylbepggimag" path="res://Scenes/Map/Combat/enemy_sprite.tscn" id="5_d7coi"]
[ext_resource type="PackedScene" uid="uid://cefk5ifs7rf4r" path="res://Scenes/Map/Combat/minigame_column.tscn" id="6_7xsl3"]

[node name="Combat" type="Node2D"]
script = ExtResource("1_pbo0u")
noteScene = ExtResource("2_kjpon")

[node name="Background" type="ColorRect" parent="."]
clip_children = 2
offset_right = 1403.0
offset_bottom = 762.0
color = Color(0.933333, 0.862745, 0.701961, 1)

[node name="EnemyScreen" type="ColorRect" parent="."]
offset_left = 26.0
offset_top = 16.0
offset_right = 904.0
offset_bottom = 739.0
color = Color(0.588235, 0.505882, 0.439216, 1)

[node name="background" type="Sprite2D" parent="EnemyScreen"]
position = Vector2(439, 361.5)

[node name="Reward" type="Label" parent="EnemyScreen"]
layout_mode = 0
offset_left = 408.0
offset_top = 224.0
offset_right = 448.0
offset_bottom = 247.0
label_settings = ExtResource("3_ctww0")

[node name="PartSprite" parent="EnemyScreen" instance=ExtResource("4_6gjpa")]
position = Vector2(442, 328)

[node name="Enemy" parent="EnemyScreen" node_paths=PackedStringArray("background") instance=ExtResource("5_d7coi")]
position = Vector2(439, 361.5)
background = NodePath("../background")

[node name="Health" type="ColorRect" parent="EnemyScreen"]
layout_mode = 0
offset_left = 889.0
offset_top = 533.0
offset_right = 1364.0
offset_bottom = 573.0
color = Color(0.254902, 0.105882, 0.105882, 1)

[node name="Name" type="Label" parent="EnemyScreen/Health"]
layout_mode = 0
offset_top = -45.0
offset_right = 242.0
offset_bottom = -3.0
text = "Animated Armor"
label_settings = ExtResource("3_ctww0")

[node name="Current" type="ColorRect" parent="EnemyScreen/Health"]
layout_mode = 0
offset_right = 253.0
offset_bottom = 40.0
color = Color(0.0156863, 0.690196, 0, 1)

[node name="LastHit" type="Label" parent="EnemyScreen/Health"]
layout_mode = 0
offset_left = 264.0
offset_top = -45.0
offset_right = 474.0
offset_bottom = -3.0
label_settings = ExtResource("3_ctww0")
horizontal_alignment = 2

[node name="You" type="ColorRect" parent="EnemyScreen"]
layout_mode = 0
offset_left = 889.0
offset_top = 658.0
offset_right = 1364.0
offset_bottom = 698.0
color = Color(0.254902, 0.105882, 0.105882, 1)

[node name="Name" type="Label" parent="EnemyScreen/You"]
layout_mode = 0
offset_top = -45.0
offset_right = 137.0
offset_bottom = -3.0
text = "You"
label_settings = ExtResource("3_ctww0")

[node name="Current" type="ColorRect" parent="EnemyScreen/You"]
layout_mode = 0
offset_right = 432.0
offset_bottom = 40.0
color = Color(0.0156863, 0.690196, 0, 1)

[node name="LastHit" type="Label" parent="EnemyScreen/You"]
layout_mode = 0
offset_left = 115.0
offset_top = -45.0
offset_right = 475.0
offset_bottom = -3.0
label_settings = ExtResource("3_ctww0")
horizontal_alignment = 2

[node name="Minigame" type="Node2D" parent="."]
position = Vector2(1008, 425)

[node name="A" parent="Minigame" instance=ExtResource("6_7xsl3")]

[node name="W" parent="Minigame" instance=ExtResource("6_7xsl3")]
position = Vector2(100, 0)
dir = 1

[node name="S" parent="Minigame" instance=ExtResource("6_7xsl3")]
position = Vector2(200, 0)
dir = 3

[node name="D" parent="Minigame" instance=ExtResource("6_7xsl3")]
position = Vector2(300, 0)
dir = 2

[node name="Timer" type="Timer" parent="."]

[connection signal="hit" from="Minigame/A" to="." method="hit_player"]
[connection signal="hit" from="Minigame/W" to="." method="hit_enemy"]
[connection signal="hit" from="Minigame/S" to="." method="hit_enemy"]
[connection signal="hit" from="Minigame/D" to="." method="hit_player"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
